--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -3,6 +3,10 @@
     android:id="@+id/imgPhoto"
     android:layout_width="100dp"
     android:layout_height="100dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     android:orientation="vertical"
     android:src="@drawable/ic_launcher_foreground">
 
