--- a/app/src/main/res/menu/nav_bottom_menu.xml
+++ b/app/src/main/res/menu/nav_bottom_menu.xml
@@ -6,7 +6,7 @@
         android:title="@string/list_photo" />
     <item
         android:id="@+id/search_photos"
-        android:icon="@drawable/ic_launcher_search_foreground"
+        android:icon="@drawable/ic_search"
         android:title="@string/search_list_photo" />
 
 </menu>
