--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/imgPhoto"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
+    android:layout_width="@dimen/width_photo"
+    android:layout_height="@dimen/height_photo"
+    android:layout_marginStart="@dimen/margin_4"
+    android:layout_marginTop="@dimen/margin"
+    android:layout_marginEnd="@dimen/margin_4"
+    android:layout_marginBottom="@dimen/margin"
+    android:adjustViewBounds="true"
+    android:background="@color/colorBlack"
     android:orientation="vertical"
+    android:padding="@dimen/padding"
+    android:scaleType="centerCrop"
     android:src="@drawable/ic_launcher_foreground">
 
 </ImageView>
