--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -6,5 +6,6 @@
         android:icon="@drawable/ic_search"
         android:title="@string/search_title"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:orderInCategory="1"/>
 </menu>
