--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/imgPhoto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
     android:layout_marginStart="@dimen/margin_4"
     android:layout_marginTop="@dimen/margin"
     android:layout_marginEnd="@dimen/margin_4"
@@ -10,7 +10,7 @@
     android:adjustViewBounds="true"
     android:background="@color/colorBlack"
     android:orientation="vertical"
-    android:padding="@dimen/padding"
+    android:padding="@dimen/border"
     android:scaleType="centerCrop"
     android:src="@drawable/ic_launcher_foreground">
 
