--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,6 @@
     <dimen name="margin">8dp</dimen>
     <dimen name="width_photo">100dp</dimen>
     <dimen name="height_photo">100dp</dimen>
-    <dimen name="padding">1dp</dimen>
+    <dimen name="border">2dp</dimen>
     <dimen name="margin_4">4dp</dimen>
 </resources>
