--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="height_photo">100dp</dimen>
     <dimen name="border">2dp</dimen>
     <dimen name="margin_4">4dp</dimen>
+    <dimen name="height_for_large_image">300dp</dimen>
 </resources>
